Picture-in-Picture: use fallback surface id for video layer.

Bug: 870493
Change-Id: I0ef3b6ea0c83cea18de59a7a8c135a8c445b6479
Reviewed-on: https://chromium-review.googlesource.com/1161460
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580423}
Former-commit-id: 9924c89b63a13773747d186cf2fe7066b02eb747